// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Props matches snapshot with custom props 1`] = `
<div
  class="qux"
  style="position:relative;display:inline-block;opacity:0.5;border-radius:6.5px;-webkit-transition:opacity 0.25s;-moz-transition:opacity 0.25s;transition:opacity 0.25s"
>
  <div
    class="react-switch-bg"
    style="height:13px;width:37px;margin:0;position:relative;cursor:default;background:#aabbcc;border-radius:6.5px;-webkit-transition:background 0.25s;-moz-transition:background 0.25s;transition:background 0.25s"
  >
    <div
      style="position:relative;opacity:1;width:19.5px;height:13px;pointer-events:none;-webkit-transition:opacity 0.25s;-moz-transition:opacity 0.25s;transition:opacity 0.25s"
    >
      <div
        style="color:pink;padding-top:2px;padding-left:6px;font-size:20px"
      >
        ❤
      </div>
    </div>
    <div
      style="opacity:0;width:19.5px;height:13px;position:absolute;right:0;top:0;pointer-events:none;-webkit-transition:opacity 0.25s;-moz-transition:opacity 0.25s;transition:opacity 0.25s"
    >
      <svg
        height="100%"
        style="position:absolute;top:0"
        viewBox="-2 -5 14 20"
        width="100%"
      >
        <path
          d="M9.9 2.12L7.78 0 4.95 2.828 2.12 0 0 2.12l2.83 2.83L0 7.776 2.123 9.9 4.95 7.07 7.78 9.9 9.9 7.776 7.072 4.95 9.9 2.12"
          fill="#fff"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    aria-checked="true"
    aria-disabled="true"
    aria-label="bar"
    aria-labelledby="baz"
    class="react-switch-handle"
    id="foo"
    role="checkbox"
    style="height:9px;width:9px;background:#ffffff;touch-action:none;cursor:default;-webkit-transition:background-color 0.25s, left 0.25s, box-shadow 0.1s;-moz-transition:background-color 0.25s, left 0.25s, box-shadow 0.1s;transition:background-color 0.25s, left 0.25s, box-shadow 0.1s;display:inline-block;border-radius:50%;position:absolute;left:26px;top:2px;border:0;outline:0;box-shadow:0px 1px 5px rgba(0, 0, 0, 0.6)"
  />
</div>
`;

exports[`Props matches snapshot with default props 1`] = `
<div
  style="position:relative;display:inline-block;opacity:1;border-radius:14px;-webkit-transition:opacity 0.25s;-moz-transition:opacity 0.25s;transition:opacity 0.25s"
>
  <div
    class="react-switch-bg"
    style="height:28px;width:56px;margin:0;position:relative;cursor:pointer;background:#888888;border-radius:14px;-webkit-transition:background 0.25s;-moz-transition:background 0.25s;transition:background 0.25s"
  >
    <div
      style="position:relative;opacity:0;width:30px;height:28px;pointer-events:none;-webkit-transition:opacity 0.25s;-moz-transition:opacity 0.25s;transition:opacity 0.25s"
    >
      <svg
        height="100%"
        style="position:absolute;top:0"
        viewBox="-2 -5 17 21"
        width="100%"
      >
        <path
          d="M11.264 0L5.26 6.004 2.103 2.847 0 4.95l5.26 5.26 8.108-8.107L11.264 0"
          fill="#fff"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      style="opacity:1;width:30px;height:28px;position:absolute;right:0;top:0;pointer-events:none;-webkit-transition:opacity 0.25s;-moz-transition:opacity 0.25s;transition:opacity 0.25s"
    >
      <svg
        height="100%"
        style="position:absolute;top:0"
        viewBox="-2 -5 14 20"
        width="100%"
      >
        <path
          d="M9.9 2.12L7.78 0 4.95 2.828 2.12 0 0 2.12l2.83 2.83L0 7.776 2.123 9.9 4.95 7.07 7.78 9.9 9.9 7.776 7.072 4.95 9.9 2.12"
          fill="#fff"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    aria-checked="false"
    aria-disabled="false"
    class="react-switch-handle"
    role="checkbox"
    style="height:26px;width:26px;background:#ffffff;touch-action:none;cursor:pointer;-webkit-transition:background-color 0.25s, left 0.25s, box-shadow 0.1s;-moz-transition:background-color 0.25s, left 0.25s, box-shadow 0.1s;transition:background-color 0.25s, left 0.25s, box-shadow 0.1s;display:inline-block;border-radius:50%;position:absolute;left:1px;top:1px;border:0;outline:0"
    tabindex="0"
  />
</div>
`;
